[project]
name = "ezapi-icc-pro"
dynamic = ["version","dependencies"]
authors = [
    { name="Zeheng Li", email="imzehengl@gmail.com" },
]
maintainers = [
    { name="Zeheng Li", email="imzehengl@gmail.com" },
]
description = "A Python wrapper for ICC PRO RESTful API"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["ICC PRO"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zehengl/ezapi-icc-pro"
"Bug Tracker" = "https://github.com/zehengl/ezapi-icc-pro/issues"

[project.scripts]
icc-pro = "icc_pro.__main__:run"

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=67.0","setuptools_scm>=7.1.0"]
build-backend = "setuptools.build_meta"
